--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "leafs/auth": "*",
         "leafs/db": "*",
         "leafs/vite": "^0.1.0",
-        "leafs/cookie": "^1.1"
+        "leafs/cookie": "^1.1",
+        "hashids/hashids": "^5.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.16"
