Added Hashids and Mail packages

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "leafs/db": "*",
         "leafs/vite": "^0.1.0",
         "leafs/cookie": "^1.1",
-        "hashids/hashids": "^5.0"
+        "hashids/hashids": "^5.0",
+        "nette/mail": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.16"
