--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.css linguist-detectable=false
 *.js linguist-detectable=false
 *.html linguist-detectable=false
+*.blade.php linguist-detectable=false
