Mod: Packagist details

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Abdulbasit Rubeiyya",
+            "name": "Abdulbasit Rubeya",
             "email": "abdulbasitsultan4@gmail.com",
             "role": "Maintainer"
         }
