--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=LEAF_MVC
+APP_NAME=Flow
 APP_ENV=local
 APP_KEY=base64:AUAyDriQD1kFdIAPIbwTHlnCm2pYn+qxDBa55SFwB9PUzg=
 APP_DOWN=false
@@ -9,12 +9,11 @@ APP_URL=http://localhost:5500/
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=LEAF_DB_NAME
-DB_USERNAME=LEAF_DB_USERNAME
+DB_DATABASE=flow_db
+DB_USERNAME=root
 DB_PASSWORD=
 DB_CHARSET=utf8
 DB_COLLATION=utf8_unicode_ci
-# DB_COLLATION=utf8_general_ci
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
