refactor: Add leaf link command to post-create-project-cmd in composer.json

--- a/composer.json
+++ b/composer.json
@@ -78,7 +78,8 @@
             "@php -r \"unlink('README.MD'); rename('README2.MD', 'README.MD');\""
         ],
         "post-create-project-cmd": [
-            "@php leaf key:generate"
+            "@php leaf key:generate",
+            "@php leaf link"
         ]
     },
     "minimum-stability": "dev",
